--- a/signin.html
+++ b/signin.html
@@ -88,6 +88,7 @@
 
     <!-- RIGHT SIDE -->
     <div class="right fade-slide-right">
+        <div class="blur-bg"></div> 
         <p class="sign_in_p">Sign in to rent your next ride.</p>
         <div class="represent">
             <p>Drive.</p>
