--- a/signup.html
+++ b/signup.html
@@ -122,6 +122,8 @@
 
     <!-- RIGHT SIDE -->
     <div class="right fade-slide-right">
+        <div class="blur-bg"></div> 
+        <p class="sign_in_p">Sign up to rent your next ride.</p>
         <div class="represent">
             <p>Drive.</p>
             <p>Mobility.</p>
