modify the code and add new section top-cars

--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CarbyMy Sign Up</title>
+    <!--css links-->
     <link rel="stylesheet" href="css/sign_in_up.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/footer.css" />
+    <!--css links-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -130,7 +134,7 @@
             <p>Comfort.</p>
             <p>Freedom.</p>
         </div>
-        <img src="assets/images/bmw.png" alt="Vehicle" class="car-img">
+        <img src="assets/images/cars/bmw.png" alt="Vehicle" class="car-img">
     </div>
 
 </div>
