changed background added animation to links and a cart

--- a/showcase-base-design.html
+++ b/showcase-base-design.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rent Porsche 911 - CarbyMy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
-    <link rel="stylesheet" href="show-case-design.css">
+    <link rel="stylesheet" href="css/show-case-design.css">
 </head>
 <body>
 
@@ -28,14 +28,14 @@
                 <option value="eng">En</option>
                 <option value="fr">Fr</option>
             </select>
-        </div>
-        <div class="hamburger">
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
+            <i class="fa-solid fa-cart-shopping fa-3x">0</i>
         </div>
     </nav>
 </div>
+
+
+<!-- ------main body------- -->
+
 <div class="container">
     <div class="white_Bg"></div>
     <div class="prpl_Bg"></div>
@@ -46,7 +46,7 @@
                 <P style="color: rgb(148, 148, 9);">GT3 RS</P>
                 <p>Track ready. Street legal.</p>
             </div>
-            <img src="/Porshe 911 GT3 RS/Porsche 911 GT3 RS 1.webp" alt="Porsche 911">
+            <img src="assets/images/cars/Porsche 911 GT3 RS 1.webp">
             <div class="car_specs">
                 <div class="spec-item">
                     <i class="fa-solid fa-gauge-high fa-3x"></i>
