--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
 
     <script src="js/mobile-navbar.js"></script>  
     <script src="js/navbar_links.js"></script>  
-    <script src="js/home.js"></script>
-    
+    <script type="module" src="js/home.js"></script>
+
 </body>
 </html>
