added a n image slider (js)

--- a/showcase-base-design.html
+++ b/showcase-base-design.html
@@ -48,7 +48,7 @@
             </div>
             <div class="image">
                 <div id="left"><</div>
-                <img src="assets/images/cars/Porsche 911 GT3 RS 1.webp">
+                <img src="assets/images/cars/Porshe-911-GT3-RS/img_1.webp">
                 <div id="right">></div>
             </div>
             <div class="car_specs">
@@ -97,7 +97,7 @@
                     </div>
                     <div class="total-price-box">
                         <p>Estimated Total :</p>
-                        <h3 id="totalDisplay">13500</h3>
+                        <h3 id="totalDisplay">set your days first</h3>
                     </div>
                     <button type="submit" class="login-btn">Confirm Booking</button>
                 </form>
