changed files name --showcase-base-design to car-details

--- a/car-details.html
+++ b/car-details.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rent Porsche 911 - CarbyMy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
-    <link rel="stylesheet" href="css/show-case-design.css">
+    <link rel="stylesheet" href="css/car-details.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/footer.css">
 </head>
@@ -161,6 +161,6 @@
 
     <script src="js/mobile-navbar.js"></script>
     <script src="js/navbar_links.js"></script>
-    <script src="/js/showcase-base-design.js"></script>
+    <script src="js/car-details.js"></script>
 </body>
 </html>
