change direction of sandbox.js

--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
     <script src="js/navbar_links.js"></script>  
     <script type="module" defer src="js/home.js"></script>
     <script type="module" src="js/whishlist.js"></script>
+    <script src="js/sandbox.js"></script>
     
 </body>
 </html>
