Add paging logic

--- a/search-page.html
+++ b/search-page.html
@@ -196,7 +196,6 @@
         </div>
 
         <div class="cars-grid">
-            <!-- Car Card 1: BMW 3 -->
             <div class="car-card">
                 <div class="card-image-container">
                     <img src="https://flib.samar.pl/800/100/8971092868c4c665cda2560.webp" alt="BMW 3" class="car-image">
@@ -225,7 +224,6 @@
                 </div>
             </div>
 
-            <!-- Car Card 2: Volkswagen Tiguan -->
             <div class="car-card">
                 <div class="card-image-container">
                     <img src="https://flib.samar.pl/900/300/921399ec65c2c75b5752560.webp" alt="Volkswagen Tiguan" class="car-image">
@@ -254,7 +252,6 @@
                 </div>
             </div>
 
-            <!-- Car Card 3: Peugeot 208 -->
             <div class="car-card">
                 <div class="card-image-container">
                     <img src="https://flib.samar.pl/800/700/8337347e189beeac6392560.webp" alt="Peugeot 208" class="car-image">
@@ -283,7 +280,6 @@
                 </div>
             </div>
 
-            <!-- Car Card 4: Porsche 911 -->
             <div class="car-card">
                 <div class="card-image-container">
                     <img src="https://flib.samar.pl/900/700/922756dc09c4ee328722560.webp" alt="Porsche 911" class="car-image">
@@ -312,7 +308,6 @@
                 </div>
             </div>
 
-            <!-- Car Card 5: Audi Q7 -->
             <div class="car-card">
                 <div class="card-image-container">
                     <img src="https://flib.samar.pl/900/800/931835ec8c19adf35352560.webp" alt="Audi Q7" class="car-image">
@@ -341,7 +336,6 @@
                 </div>
             </div>
 
-            <!-- Car Card 6: Audi A3 -->
             <div class="car-card">
                 <div class="card-image-container">
                     <img src="https://flib.samar.pl/900/800/9048757bd8dda5f87f72560.webp" alt="Audi A3" class="car-image">
@@ -369,6 +363,9 @@
                     <button class="rent-now-btn">Rent Now</button>
                 </div>
             </div>
+        </div>
+        <div class="paging-container">
+
         </div>
     </div>
 </div>
