Implement filtering and searching

--- a/search-page.html
+++ b/search-page.html
@@ -61,7 +61,7 @@
 <!-- NAVBAR -->
 
 <div class="container">
-    <div class="sidebar">
+    <div class="filters-container">
         <div class="filter-header">
             <h2>Filters</h2>
             <button class="clear-filters">Clear all</button>
@@ -73,38 +73,7 @@
                 <i class="uil uil-angle-up filter-button"></i>
             </div>
             <div class="filter-options collapsed">
-                <label class="checkbox-container">BMW
-                    <input type="checkbox" name="brand" value="BMW" >
-                    <span class="checkmark"></span>
-                </label>
-                <label class="checkbox-container">Volkswagen
-                    <input type="checkbox" name="brand" value="Volkswagen">
-                    <span class="checkmark"></span>
-                </label>
-                <label class="checkbox-container">Peugeot
-                    <input type="checkbox" name="brand" value="Peugeot">
-                    <span class="checkmark"></span>
-                </label>
-                <label class="checkbox-container">Porsche
-                    <input type="checkbox" name="brand" value="Porsche">
-                    <span class="checkmark"></span>
-                </label>
-                <label class="checkbox-container">BMW
-                    <input type="checkbox" name="brand" value="BMW" >
-                    <span class="checkmark"></span>
-                </label>
-                <label class="checkbox-container">Volkswagen
-                    <input type="checkbox" name="brand" value="Volkswagen">
-                    <span class="checkmark"></span>
-                </label>
-                <label class="checkbox-container">Peugeot
-                    <input type="checkbox" name="brand" value="Peugeot">
-                    <span class="checkmark"></span>
-                </label>
-                <label class="checkbox-container">Porsche
-                    <input type="checkbox" name="brand" value="Porsche">
-                    <span class="checkmark"></span>
-                </label>
+
             </div>
         </div>
 
@@ -123,22 +92,6 @@
                 <i class="uil uil-angle-up filter-button"></i>
             </div>
             <div class="filter-options">
-                <label class="checkbox-container">Sedan
-                    <input type="checkbox" name="bodyType" value="Sedan">
-                    <span class="checkmark"></span>
-                </label>
-                <label class="checkbox-container">SUV
-                    <input type="checkbox" name="bodyType" value="SUV">
-                    <span class="checkmark"></span>
-                </label>
-                <label class="checkbox-container">Hatchback
-                    <input type="checkbox" name="bodyType" value="Hatchback">
-                    <span class="checkmark"></span>
-                </label>
-                <label class="checkbox-container">Coupe
-                    <input type="checkbox" name="bodyType" value="Coupe">
-                    <span class="checkmark"></span>
-                </label>
             </div>
         </div>
 
@@ -196,173 +149,7 @@
         </div>
 
         <div class="cars-grid">
-            <div class="car-card">
-                <div class="card-image-container">
-                    <img src="https://flib.samar.pl/800/100/8971092868c4c665cda2560.webp" alt="BMW 3" class="car-image">
-                    <button class="wishlist-btn"><i class="uil uil-heart"></i></button>
-                </div>
-                <div class="card-content">
-                    <div class="card-header-info">
-                        <h3 class="car-model">BMW 3</h3>
-                        <p class="car-price">850DH<span>/day</span></p>
-                    </div>
-                    <div class="car-specs">
-                        <div class="spec-item">
-                            <i class="uil uil-users-alt"></i>
-                            <span>5 Seats</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-pump"></i>
-                            <span>59 L</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-car-sideview"></i>
-                            <span>4 Doors</span>
-                        </div>
-                    </div>
-                    <button class="rent-now-btn">Rent Now</button>
-                </div>
-            </div>
 
-            <div class="car-card">
-                <div class="card-image-container">
-                    <img src="https://flib.samar.pl/900/300/921399ec65c2c75b5752560.webp" alt="Volkswagen Tiguan" class="car-image">
-                    <button class="wishlist-btn"><i class="uil uil-heart"></i></button>
-                </div>
-                <div class="card-content">
-                    <div class="card-header-info">
-                        <h3 class="car-model">Volkswagen Tiguan</h3>
-                        <p class="car-price">750DH<span>/day</span></p>
-                    </div>
-                    <div class="car-specs">
-                        <div class="spec-item">
-                            <i class="uil uil-users-alt"></i>
-                            <span>5 Seats</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-pump"></i>
-                            <span>58 L</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-car-sideview"></i>
-                            <span>5 Doors</span>
-                        </div>
-                    </div>
-                    <button class="rent-now-btn">Rent Now</button>
-                </div>
-            </div>
-
-            <div class="car-card">
-                <div class="card-image-container">
-                    <img src="https://flib.samar.pl/800/700/8337347e189beeac6392560.webp" alt="Peugeot 208" class="car-image">
-                    <button class="wishlist-btn"><i class="uil uil-heart"></i></button>
-                </div>
-                <div class="card-content">
-                    <div class="card-header-info">
-                        <h3 class="car-model">Peugeot 208</h3>
-                        <p class="car-price">500DH<span>/day</span></p>
-                    </div>
-                    <div class="car-specs">
-                        <div class="spec-item">
-                            <i class="uil uil-users-alt"></i>
-                            <span>5 Seats</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-pump"></i>
-                            <span>50 L</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-car-sideview"></i>
-                            <span>5 Doors</span>
-                        </div>
-                    </div>
-                    <button class="rent-now-btn">Rent Now</button>
-                </div>
-            </div>
-
-            <div class="car-card">
-                <div class="card-image-container">
-                    <img src="https://flib.samar.pl/900/700/922756dc09c4ee328722560.webp" alt="Porsche 911" class="car-image">
-                    <button class="wishlist-btn"><i class="uil uil-heart"></i></button>
-                </div>
-                <div class="card-content">
-                    <div class="card-header-info">
-                        <h3 class="car-model">Porsche 911</h3>
-                        <p class="car-price">2500DH<span>/day</span></p>
-                    </div>
-                    <div class="car-specs">
-                        <div class="spec-item">
-                            <i class="uil uil-users-alt"></i>
-                            <span>2 Seats</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-pump"></i>
-                            <span>63 L</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-car-sideview"></i>
-                            <span>2 Doors</span>
-                        </div>
-                    </div>
-                    <button class="rent-now-btn">Rent Now</button>
-                </div>
-            </div>
-
-            <div class="car-card">
-                <div class="card-image-container">
-                    <img src="https://flib.samar.pl/900/800/931835ec8c19adf35352560.webp" alt="Audi Q7" class="car-image">
-                    <button class="wishlist-btn"><i class="uil uil-heart"></i></button>
-                </div>
-                <div class="card-content">
-                    <div class="card-header-info">
-                        <h3 class="car-model">Audi Q7</h3>
-                        <p class="car-price">1500DH<span>/day</span></p>
-                    </div>
-                    <div class="car-specs">
-                        <div class="spec-item">
-                            <i class="uil uil-users-alt"></i>
-                            <span>7 Seats</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-pump"></i>
-                            <span>85 L</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-car-sideview"></i>
-                            <span>5 Doors</span>
-                        </div>
-                    </div>
-                    <button class="rent-now-btn">Rent Now</button>
-                </div>
-            </div>
-
-            <div class="car-card">
-                <div class="card-image-container">
-                    <img src="https://flib.samar.pl/900/800/9048757bd8dda5f87f72560.webp" alt="Audi A3" class="car-image">
-                    <button class="wishlist-btn"><i class="uil uil-heart"></i></button>
-                </div>
-                <div class="card-content">
-                    <div class="card-header-info">
-                        <h3 class="car-model">Audi A3</h3>
-                        <p class="car-price">900DH<span>/day</span></p>
-                    </div>
-                    <div class="car-specs">
-                        <div class="spec-item">
-                            <i class="uil uil-users-alt"></i>
-                            <span>5 Seats</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-pump"></i>
-                            <span>50 L</span>
-                        </div>
-                        <div class="spec-item">
-                            <i class="uil uil-car-sideview"></i>
-                            <span>4 Doors</span>
-                        </div>
-                    </div>
-                    <button class="rent-now-btn">Rent Now</button>
-                </div>
-            </div>
         </div>
         <div class="paging-container">
 
@@ -370,5 +157,5 @@
     </div>
 </div>
 </body>
-<script src="js/search-page.js"></script>
+<script src="js/search-page.js" type="module"></script>
 </html>
