Fix images background in the wishlist sidebar

--- a/search-page.html
+++ b/search-page.html
@@ -136,11 +136,11 @@
         </div>
 
         <div class="filter-section">
-            <div class="filter-title">
+            <div class="filter-title ">
                 <h3>Body Type</h3>
                 <i class="uil uil-angle-up filter-button"></i>
             </div>
-            <div class="filter-options">
+            <div class="filter-options collapsed">
             </div>
         </div>
 
