Add registring user in sign up

--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
         <div class="btns">
             <!--Whislist btn-->
             <div class="whishlist_btn">
-                <div class="menu_btn" id="menuBtn">
+                <div class="menu_btn" id="1menuBtn">
                     <div>
                         <i class="uil uil-heart"></i> Wishlist
                     </div>
@@ -131,21 +131,21 @@
         <form id="loginForm">
             <div class="grp_label">
                 <div class="label">
-                    <label id="first_name">First Name</label>
+                    <label>First Name</label>
                     <input type="text" form="first_name" id="first_name" placeholder="Enter your first name" required>
                 </div>
                 <div class="label">
-                    <label id="last_name">Last Name</label>
+                    <label>Last Name</label>
                     <input type="text" form="last_name" id="last_name" placeholder="Enter your last name" required>
                 </div>
             </div>
             <div class="grp_label">
                 <div class="label">
-                    <label id="phone">Phone</label>
+                    <label>Phone</label>
                     <input type="tel" form="phone" id="phone" placeholder="Enter your phone" >
                 </div>
                 <div class="label">
-                    <label id="City">City</label>
+                    <label>City</label>
                     <select name="city" id="city">
                         <option value="Casablnca">Casablnca</option>
                         <option value="Fes">Fes</option>
@@ -244,6 +244,7 @@
 <script src="js/mobile-navbar.js"></script>
 <script src="js/navbar_links.js"></script> 
 <script type="module" src="js/whishlist.js"></script>
+<script type="module" src="js/signup.js"></script>
 
 </body>
 </html>
