Add logging logic for signin page

--- a/signin.html
+++ b/signin.html
@@ -208,5 +208,6 @@
     <script src="js/mobile-navbar.js"></script>  
     <script src="js/navbar_links.js"></script> 
     <script type="module" src="js/whishlist.js"></script>
+    <script type="module" src="js/signin.js"></script>
 </body>
 </html>
