--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                 <!--Whislist btn-->
                 <a href="/signin.html" class="login">Login</a>
                 <a href="/signup.html" class="signup">Sign Up</a>
+                <a href="#" class="logout" id="logoutBtn">Logout</a>
+
                 <select name="lang" id="lang">
                     <option value="eng">En</option>
                     <option value="fr">Fr</option>
@@ -75,6 +77,7 @@
                 <div class="mobile-btns">
                     <a href="/signin.html" class="login">Login</a>
                     <a href="/signup.html" class="signup">Sign Up</a>
+                    <a href="#" class="logout" id="logoutBtnMobile">Logout</a>
                 </div>
 
                 <select name="lang" id="lang-mobile" class="lang-select">
@@ -353,6 +356,7 @@
     <script src="js/navbar_links.js"></script>  
     <script type="module" defer src="js/home.js"></script>
     <script type="module" src="js/whishlist.js"></script>
+    <script type="module" src="js/navbar-login.js"></script>
 
 </body>
 </html>
