--- a/search-page.html
+++ b/search-page.html
@@ -36,6 +36,8 @@
             <!--Whislist btn-->
             <a href="/signin.html" class="login">Login</a>
             <a href="/signup.html" class="signup">Sign Up</a>
+            <a href="#" class="logout" id="logoutBtn">Logout</a>
+
             <select name="lang" id="lang">
                 <option value="eng">En</option>
                 <option value="fr">Fr</option>
@@ -71,6 +73,7 @@
             <div class="mobile-btns">
                 <a href="/signin.html" class="login">Login</a>
                 <a href="/signup.html" class="signup">Sign Up</a>
+                <a href="#" class="logout" id="logoutBtnMobile">Logout</a>
             </div>
 
             <select name="lang" id="lang-mobile" class="lang-select">
@@ -108,6 +111,7 @@
 <!--WISHLIST ASIDEBAR-->
 
 <!-- NAVBAR -->
+
 
 <div class="container">
     <div class="filters-container">
@@ -208,5 +212,7 @@
 </body>
 <script src="js/search-page.js" type="module"></script>
 <script type="module" src="js/whishlist.js"></script>
+<script type="module" src="js/navbar-login.js"></script>
+
 
 </html>
